# yand-mvsk

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: etf_mvsk_vs_mv.py  mvsk_vs_mv.py  quickstart.py
scripts/: generate_demo_gif.py  generate_hero.py
src/yand_mvsk/: __init__.py  _core.py  _facade.py
tests/: test_facade.py  test_solver.py
