[project]
name = "yand-mvsk"
version = "0.2.0"
description = "Second-order portfolio optimizer for mean-variance-skewness-kurtosis (MVSK) via Yau's Affine-Normal Descent"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ben Wu", email = "kaliwu@berkeley.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = ["portfolio", "optimization", "mvsk", "skewness", "kurtosis", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
examples = ["pandas>=2.0", "yfinance>=0.2"]

[project.urls]
Repository = "https://github.com/dthinkr/yand-mvsk"
Paper = "https://arxiv.org/abs/2604.25378"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.7",
    "pandas>=2.3.3",
]
